cleaned compose files, fixed history scroll, hided sider scrollbar

--- a/client/src/components/Layout/Sider/index.module.css
+++ b/client/src/components/Layout/Sider/index.module.css
@@ -6,6 +6,10 @@
   padding: 16px;
 }
 
+.root::-webkit-scrollbar {
+  display: none;
+}
+
 .drawer {
   width: 300px;
 }
